--- a/index.html
+++ b/index.html
@@ -5,13 +5,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
-  <link rel="stylesheet" href="/estilo/style.css">
   
   <title>Frontend Mentor | QR code component</title>
 
   <!--Mobile-->
-  <link rel="stylesheet" href="/estilo/style.css">
+  <link rel="stylesheet" href="estilo/style.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
