--- a/index.html
+++ b/index.html
@@ -13,6 +13,65 @@
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+body{
+    background-color:  hsl(219, 71%, 87%);
+    font-family: 'Outfit', Verdana, Geneva, Tahoma, sans-serif;
+
+}
+
+main{
+    width: 400px;
+    height: 650px; 
+
+    margin: auto;
+    margin-top: 100px;
+    margin-bottom: 105px;
+
+    padding-top: 20px;
+    
+    background-color: white;
+    border-radius: 20px;
+
+}
+
+#qr-code{
+    width: 360px;
+    height: 360px;
+    margin: auto;
+   
+    background: blue url('../images/image-qr-code.png') no-repeat center/ cover;
+
+    border-radius: 20px;
+}
+
+h1{
+    margin: auto;
+    padding: 30px;
+
+    text-align: center;
+    font-size: 1.7em;
+
+    color: hsl(218, 44%, 22%);
+}
+p{
+    margin: auto;
+    padding-left: 30px;
+    padding-right: 30px;
+
+    text-align: center;
+    font-size: 1em;
+
+    color:  hsl(220, 15%, 55%);
+}
+
+
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
